SERVER-45521 Define TopologyListener, ServerPingMonitor, and SingleServerPingMonitor classes.
 create mode 100644 src/mongo/client/sdam/topology_listener.h
 create mode 100644 src/mongo/client/server_ping_monitor.cpp
 create mode 100644 src/mongo/client/server_ping_monitor.h

--- a/src/mongo/client/SConscript
+++ b/src/mongo/client/SConscript
@@ -191,6 +191,7 @@ clientDriverEnv.Library(
         'replica_set_change_notifier.cpp',
         'replica_set_monitor.cpp',
         'replica_set_monitor_manager.cpp',
+        'server_ping_monitor.cpp',
     ],
     LIBDEPS=[
         '$BUILD_DIR/mongo/db/write_concern_options',
