--- a/buildscripts/resmokeconfig/suites/concurrency_sharded_multi_stmt_txn_with_stepdowns.yml
+++ b/buildscripts/resmokeconfig/suites/concurrency_sharded_multi_stmt_txn_with_stepdowns.yml
@@ -170,6 +170,7 @@ selector:
 
   # Uses getMore in the same state function as a command not supported in a transaction.
   - jstests/concurrency/fsm_workloads/list_indexes.js
+  - jstests/concurrency/fsm_workloads/agg_union_with_chunk_migrations.js
 
   # Uses non-retryable commands in the same state function as a command not supported in a
   # transaction.
