SERVER-45414 Remove CannotImplicitlyCreateCollection retry logic on mongos

--- a/src/mongo/base/error_codes.yml
+++ b/src/mongo/base/error_codes.yml
@@ -247,8 +247,7 @@ error_codes:
     - {code: 225,name: TransactionTooOld,categories: [VoteAbortError]}
     - {code: 226,name: AtomicityFailure}
     - {code: 227,name: CannotImplicitlyCreateCollection,
-                  extra: CannotImplicitlyCreateCollectionInfo,
-                  categories: [NeedRetargettingError]}
+                  extra: CannotImplicitlyCreateCollectionInfo}
     - {code: 228,name: SessionTransferIncomplete}
     - {code: 229,name: MustDowngrade}
     - {code: 230,name: DNSHostNotFound}
