SERVER-45280 Invalidate default read write concern cache on replication rollback

--- a/src/mongo/db/repl/SConscript
+++ b/src/mongo/db/repl/SConscript
@@ -448,6 +448,7 @@ env.Library(
         'rs_rollback',
         'storage_interface_impl',
         '$BUILD_DIR/mongo/db/query_exec',
+        '$BUILD_DIR/mongo/db/read_write_concern_defaults_mock',
         '$BUILD_DIR/mongo/db/service_context',
         '$BUILD_DIR/mongo/db/service_context_d_test_fixture',
     ],
