SERVER-43721 Rename DistCache to ReadThroughCache
No functional changes, just rename.

 rename src/mongo/util/{dist_cache.cpp => read_through_cache.cpp} (84%)
 rename src/mongo/util/{dist_cache.h => read_through_cache.h} (90%)
 rename src/mongo/util/{dist_cache_test.cpp => read_through_cache_test.cpp} (88%)

--- a/src/mongo/util/SConscript
+++ b/src/mongo/util/SConscript
@@ -205,7 +205,7 @@ env.Library(
 env.Library(
     target='caching',
     source=[
-        'dist_cache.cpp',
+        'read_through_cache.cpp',
     ],
     LIBDEPS=[
         '$BUILD_DIR/mongo/base',
