--- a/src/mongo/util/SConscript
+++ b/src/mongo/util/SConscript
@@ -205,7 +205,7 @@ env.Library(
 env.Library(
     target='caching',
     source=[
-        'read_through_cache.cpp',
+        'dist_cache.cpp',
     ],
     LIBDEPS=[
         '$BUILD_DIR/mongo/base',
