SERVER-43276 Implement resume after network error functionality in CollectionCloner query

--- a/src/mongo/client/SConscript
+++ b/src/mongo/client/SConscript
@@ -374,3 +374,14 @@ env.CppIntegrationTest(
         'clientdriver_network',
     ],
 )
+
+env.Library(
+    target='dbclient_mockcursor',
+    source=[
+        'dbclient_mockcursor.cpp'
+    ],
+    LIBDEPS_PRIVATE=[
+        'clientdriver_minimal'
+    ],
+)
+
