SERVER-45399 Add basic union aggregation stage for unsharded collections

--- a/src/mongo/db/pipeline/SConscript
+++ b/src/mongo/db/pipeline/SConscript
@@ -323,6 +323,7 @@ pipelineEnv.Library(
         'document_source_sort.cpp',
         'document_source_sort_by_count.cpp',
         'document_source_tee_consumer.cpp',
+        'document_source_union_with.cpp',
         'document_source_unwind.cpp',
         'pipeline.cpp',
         'semantic_analysis.cpp',
@@ -447,6 +448,7 @@ env.CppUnitTest(
         'document_source_skip_test.cpp',
         'document_source_sort_by_count_test.cpp',
         'document_source_sort_test.cpp',
+        'document_source_union_with_test.cpp',
         'document_source_unwind_test.cpp',
         'expression_and_test.cpp',
         'expression_compare_test.cpp',
