SERVER-44953 Secondaries should restart index builds when a commitIndexBuild oplog entry is processed but no index build is active
Additionally, only abort an index build after a user interrupt if we are still primary. During
two-phase index builds, rely on the new primary to finish the index build.

--- a/src/mongo/db/catalog/SConscript
+++ b/src/mongo/db/catalog/SConscript
@@ -124,6 +124,19 @@ env.Library(
 )
 
 env.Library(
+    target='index_build_oplog_entry',
+    source=[
+        "index_build_oplog_entry.cpp",
+    ],
+    LIBDEPS=[
+        '$BUILD_DIR/mongo/base',
+        "$BUILD_DIR/mongo/bson/util/bson_extract",
+        "$BUILD_DIR/mongo/db/repl/oplog_entry",
+        "$BUILD_DIR/mongo/rpc/command_status",
+    ],
+)
+
+env.Library(
     target='index_key_validate',
     source=[
         "index_key_validate.cpp",
