--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -801,6 +801,7 @@ env.Library(
         'index_build_entry_helpers',
         'server_options_core',
         '$BUILD_DIR/mongo/db/catalog/index_build_entry_idl',
+        '$BUILD_DIR/mongo/db/catalog/index_build_oplog_entry',
         '$BUILD_DIR/mongo/db/catalog/collection',
         '$BUILD_DIR/mongo/db/catalog/collection_catalog',
         '$BUILD_DIR/mongo/db/concurrency/lock_manager',
