SERVER-44978 Thread-through ServiceContext and ThreadPool to ReadThroughCache
There are no functional changes to this CR, it just instantiates every
usage of ReadThroughCache with a ServiceContext and ThreadPool, which
will be used for making the acquire method asynchronous.

--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -382,6 +382,7 @@ env.Library(
     ],
     LIBDEPS_PRIVATE=[
         '$BUILD_DIR/mongo/util/caching',
+        '$BUILD_DIR/mongo/util/concurrency/thread_pool',
         'logical_clock',
     ],
 )
