SERVER-45655 fix refine_collection_shard_key_basic.js under continuous_config_stepdown suite
refine_collection_shard_key_basic.js checks if entries associated with
refineCollectionShardKey are correctly inserted into the changelog.
In the case that the primary stepdown do to a failure,
it is not guaranteed that these entries are committed on the changelog.

This commit introduces the following changes:
 - refine_collection_shard_key_basic.js does not perform any check on
   the changelog entries so that it can be run in the continuous_config_stepdown suite.
 - introduces a new refine_collection_shard_key_changelog.js test with the only purpose of checking
   that changelog entries are inserted correctly for the refineCollectionShardKey operation.
   This test is blacklisted in the continuous_config_stepdown suite.

 create mode 100644 jstests/sharding/refine_collection_shard_key_changelog.js

--- a/buildscripts/resmokeconfig/suites/sharding_continuous_config_stepdown.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_continuous_config_stepdown.yml
@@ -204,6 +204,8 @@ selector:
   - jstests/sharding/read_write_concern_defaults_commands_api.js
   - jstests/sharding/read_write_concern_defaults_propagation.js
 
+  # On stepdown there is not gurantee that changelog entries have been inserted [SERVER-45655]
+  - jstests/sharding/refine_collection_shard_key_changelog.js
   # This is expected to fail if the config server steps down during moveChunk.
   - jstests/sharding/index_operations_abort_concurrent_outgoing_migrations.js
   # Runs commands on mongos which target the primary configsvr, and then checks the outcome using
