--- a/src/mongo/s/SConscript
+++ b/src/mongo/s/SConscript
@@ -106,7 +106,6 @@ env.Library(
     source=[
         'sharding_initialization.cpp',
         'sharding_task_executor_pool_controller.cpp',
-        'warmup_server_parameters.cpp',
         env.Idlc('sharding_task_executor_pool.idl')[0],
         'client/sharding_connection_hook.cpp',
         'client/sharding_network_connection_hook.cpp',
@@ -124,6 +123,7 @@ env.Library(
         '$BUILD_DIR/mongo/executor/thread_pool_task_executor',
         '$BUILD_DIR/mongo/executor/connection_pool_executor',
         'coreshard',
+        'mongos_server_parameters',
         'sharding_task_executor',
     ],
 )
@@ -140,6 +140,7 @@ env.Library(
         "$BUILD_DIR/mongo/s/client/sharding_client",
         "$BUILD_DIR/mongo/s/coreshard",
         '$BUILD_DIR/mongo/s/client/shard_interface',
+        'hedge_options_util',
     ],
 )
 
@@ -409,6 +410,31 @@ env.Library(
     ],
 )
 
+env.Library(
+    target='mongos_server_parameters',
+    source=[
+        env.Idlc('mongos_server_parameters.idl')[0],
+    ],
+    LIBDEPS_PRIVATE=[
+        '$BUILD_DIR/mongo/idl/server_parameter',
+    ]
+)
+
+env.Library(
+    target='hedge_options_util',
+    source=[
+        'hedge_options_util.cpp',
+    ],
+    LIBDEPS=[
+        'mongos_server_parameters',
+    ],
+    LIBDEPS_PRIVATE=[
+        '$BUILD_DIR/mongo/client/read_preference',
+        '$BUILD_DIR/mongo/db/query/query_request',
+        '$BUILD_DIR/mongo/idl/server_parameter',
+    ]
+)
+
 env.CppUnitTest(
     target='s_test',
     source=[
@@ -434,6 +460,7 @@ env.CppUnitTest(
         'client/shard_connection_test.cpp',
         'cluster_identity_loader_test.cpp',
         'cluster_last_error_info_test.cpp',
+        'hedge_options_util_test.cpp',
         'request_types/add_shard_request_test.cpp',
         'request_types/add_shard_to_zone_request_test.cpp',
         'request_types/balance_chunk_request_test.cpp',
