--- a/buildscripts/resmokeconfig/suites/change_streams.yml
+++ b/buildscripts/resmokeconfig/suites/change_streams.yml
@@ -1,5 +1,5 @@
 test_kind: js_test
-use_in_multiversion_burn_in_tests: true
+use_in_multiversion: change_streams_multiversion
 
 selector:
   roots:
