SERVER-44260 New transaction should wait for previous txn table update to be in snapshot

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -31,6 +31,8 @@ replica_sets_jscore_multiversion_passthrough:
   test_file: jstests/core/min_max_key.js
 - ticket: SERVER-40805
   test_file: jstests/core/profile_find.js
+- ticket: SERVER-44260
+  test_file: jstests/core/txns/new_transaction_waits_for_previous_txn_table_updates.js
 
 replica_sets_multiversion:
 - ticket: SERVER-42825
